--- a/Kakao_practice/CSS/styles.css
+++ b/Kakao_practice/CSS/styles.css
@@ -1,1 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 @import "reset.css";
+@import "status-bar.css";
+
+boby{
+    background-color: white;
+    padding: 10px 20px:
+    color: #191919;
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont;
+
+
+}
